--- a/index.html
+++ b/index.html
@@ -352,6 +352,9 @@ Faks: +998 69 228 76 71 <br>
 
 E-Mail: niei_info@edu.uz
 </h2>
+<footer>
+    <p>&copy; abduganiyevoo4</p>
+</footer>
 
 </body>
 </html>
